src/objects/Pass_History__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Pass Results</relationshipLabel>
        <relationshipName>Pass_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <referenceTo>Test__c</referenceTo>
        <relationshipLabel>Pass Results</relationshipLabel>
        <relationshipName>Pass_Results</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Pass History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Pass History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pass Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>